hard-gists/6ffa8fb7756c16798b2a/run.log
=== Docker Run Log for 6ffa8fb7756c16798b2a ===
Started at: Mi 29. Okt 16:57:14 CET 2025

[2025-10-29 16:57:14] START: Running container for 6ffa8fb7756c16798b2a
[2025-10-29 16:57:14] SUCCESS: Container c16245de2ef01c740591164d606cd9074db599a0ab6049ec0c87360078fca180 started for 6ffa8fb7756c16798b2a
=== Container logs for 6ffa8fb7756c16798b2a ===
  File "/snippet.py", line 113
    print boke_str
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6ffa8fb7756c16798b2a ===
[2025-10-29 16:57:16] INFO: Container c16245de2ef01c740591164d606cd9074db599a0ab6049ec0c87360078fca180 has stopped
